--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ body {
 
 <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="file:///media/fuse/drivefs-9b5b5e86dd330c3bc978f15a551609b6/root/Comoute%20Scieence/Electric%20Cars.html">Benefits</a>
+  <a href="Electric.html">Benefits</a>
   <a href="https://www.cleanegroup.org/">Environment</a>
-  <a href="file:///media/fuse/drivefs-9b5b5e86dd330c3bc978f15a551609b6/root/Comoute%20Scieence/Table.html">Chart</a>
+  <a href="Table.html">Chart</a>
 </div>
 
 <div style="padding-left:16px">
